@@ -473,6 +473,13 @@ C-API
 Library
 -------
 
+- The default size of the re module's compiled regular expression cache has
+  been increased from 100 to 500 and the cache replacement policy has changed
+  from simply clearing the entire cache on overflow to randomly forgetting 20%
+  of the existing cached compiled regular expressions.  This is a performance
+  win for applications that use a lot of regular expressions and limits the
+  impact of the performance hit anytime the cache is exceeded.
+
 - Issue #7113: Speed up loading in configparser. Patch by Łukasz Langa.
 
 - Issue #9032: XML-RPC client retries the request on EPIPE error. The EPIPE
